--- a/afl_scripts/Cargo.toml
+++ b/afl_scripts/Cargo.toml
@@ -11,6 +11,8 @@ lazy_static = "= 1.4.0"
 url = "= 2.2.0"
 config = "= 0.10.1"
 regex = "= 1.4.3"
+log = "0.4"
+env_logger = "0.9.0"
 
 # crates we test
 smallvec = "=1.7.0"
