--- a/afl_scripts/Cargo.toml
+++ b/afl_scripts/Cargo.toml
@@ -15,13 +15,13 @@ log = "0.4"
 env_logger = "0.9.0"
 
 # crates we test
-smallvec = "=1.7.0"
-regex-syntax = "= 0.6.22"
-proc-macro2 = "= 1.0.24"
-clap = "= 2.33.3"
-semver = "= 0.11.0"
-http = "= 0.2.6"
-flate2 = "= 1.0.19"
-serde_json = "= 1.0.61"
-semver-parser = "= 0.10.2"
+# smallvec = "=1.7.0"
+# regex-syntax = "= 0.6.22"
+# proc-macro2 = "= 1.0.24"
+# clap = "= 2.33.3"
+# semver = "= 0.11.0"
+# http = "= 0.2.6"
+# flate2 = "= 1.0.19"
+# serde_json = "= 1.0.61"
+# semver-parser = "= 0.10.2"
 # time = "= 0.2.24"
